language/move-lang/tests/move_check/parser/invalid_unpack_assign_rhs_not_fields.exp
error: 

    ┌── tests/move_check/parser/invalid_unpack_assign_rhs_not_fields.move:11:14 ───
    │
 11 │         X::S 0 = 0;
    │              ^ Unrecognized Token: 0
    ·
 11 │         X::S 0 = 0;
    │              - Expected:  "!=", "%", "&", "&&", "(", "()", ")", "*", "+", ",", "-", ".", "/", ":", "::", ";", "<", "<=", "=", "==", ">", ">=", "^", "acquires", "as", "else", "{", "|", "||", "}", r#"0[xX][0-9a-fA-F]+"#, r#"[a-zA-Z_][a-zA-Z0-9_]*"#,
    │

